--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4,29 +4,48 @@ body {
   margin: 0; }
   body header {
     width: 80%;
-    margin: 11px auto; }
-    body header p {
-      color: #44c0c2;
-      font-family: 'Lobster', Arial, sans-serif;
-      font-size: 43px;
-      margin: 0;
-      display: inline; }
-    body header ul {
-      display: inline;
-      list-style-type: none;
-      float: right; }
-      body header ul li {
-        display: inline; }
-        body header ul li a {
+    margin: 11px auto;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+    body header .logo {
+      float: left;
+      width: 20%; }
+      body header .logo p {
+        color: #44c0c2;
+        font-family: 'Lobster', Arial, sans-serif;
+        font-size: 43px;
+        margin: 0; }
+    body header .main-menu {
+      width: 80%; }
+      body header .main-menu ul {
+        display: inline;
+        list-style-type: none;
+        float: right;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        text-align: right; }
+        body header .main-menu ul li a {
           color: #484c55;
           text-decoration: none;
           font-size: 15px;
           padding: 28px 30px 25px;
           -webkit-transition: all 0.1s;
           transition: all 0.1s; }
-          body header ul li a:hover {
+          body header .main-menu ul li a:hover {
             color: #44c0c2;
             background-color: #f8f9fb;
             border-bottom: 3px solid #44c0c2;
             -webkit-transition: all 0.1s;
             transition: all 0.1s; }
+
+@media only screen and (min-width: 320px) and (max-width: 950px) {
+  .main-menu {
+    display: none !important; } }
+
+@media only screen and (min-width: 951px) {
+  .hamburger {
+    display: none !important; } }
