--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,3 +1,5 @@
+@import "app/libs/sass-mediaqueries/_media-queries"
+
 @import url('https://fonts.googleapis.com/css?family=Lobster|Open+Sans');
 $color-green: #44c0c2
 
@@ -11,33 +13,39 @@ body
 	header
 		width: 80%
 		margin: 11px auto
-		p 
-			color: $color-green
-			font:
-				family: 'Lobster', Arial, sans-serif
-				size: 43px
-			margin: 0
-			display: inline
-		ul 
-			display: inline
-			list-style-type: none
-			float: right
-			li 
+		display: flex
+		.logo
+			float: left
+			width: 20%
+			p 
+				color: $color-green
+				font:
+					family: 'Lobster', Arial, sans-serif
+					size: 43px
+				margin: 0
+		.main-menu
+			width: 80%
+			ul 
 				display: inline
-				a 
-					color: $main-text-color
-					text-decoration: none
-					font-size: 15px
-					padding: 28px 30px 25px
-					transition: all 0.1s
-
-					&:hover 
-						color: $color-green
-						background-color: #f8f9fb
-						border-bottom: 3px solid #44c0c2
+				list-style-type: none
+				float: right
+				display: flex
+				text-align: right
+				li 
+					a 
+						color: $main-text-color
+						text-decoration: none
+						font-size: 15px
+						padding: 28px 30px 25px
 						transition: all 0.1s
 
-
-
+						&:hover 
+							color: $color-green
+							background-color: #f8f9fb
+							border-bottom: 3px solid #44c0c2
+							transition: all 0.1s
 
 		
+@include screen(320px, 950px)  { .main-menu{display: none!important;} }
+
+@include min-screen(951px)  { .hamburger{display: none!important;} }
