--- a/app/css/libs.css
+++ b/app/css/libs.css
@@ -11,7 +11,7 @@
 ===================================*/
 .bx-wrapper {
   position: relative;
-  margin: 0 auto 60px;
+  margin: 0 auto;
   padding: 0;
   *zoom: 1;
   -ms-touch-action: pan-y;
@@ -35,9 +35,6 @@ ul.bxslider {
 /** THEME
 ===================================*/
 .bx-wrapper {
-  -webkit-box-shadow: 0 0 5px #ccc;
-  box-shadow: 0 0 5px #ccc;
-  border: 5px solid #fff;
   background: #fff; }
 
 .bx-wrapper .bx-pager,
@@ -95,27 +92,19 @@ ul.bxslider {
 /* DIRECTION CONTROLS (NEXT / PREV) */
 .bx-wrapper .bx-prev {
   left: 10px;
-  background: url("images/controls.png") no-repeat 0 -32px; }
-
-.bx-wrapper .bx-prev:hover,
-.bx-wrapper .bx-prev:focus {
-  background-position: 0 0; }
+  background: url("../img/prev.png") no-repeat 0 0; }
 
 .bx-wrapper .bx-next {
   right: 10px;
-  background: url("images/controls.png") no-repeat -43px -32px; }
-
-.bx-wrapper .bx-next:hover,
-.bx-wrapper .bx-next:focus {
-  background-position: -43px 0; }
+  background: url("../img/next.png") no-repeat 0 0; }
 
 .bx-wrapper .bx-controls-direction a {
   position: absolute;
   top: 50%;
   margin-top: -16px;
   outline: 0;
-  width: 32px;
-  height: 32px;
+  width: 52px;
+  height: 52px;
   text-indent: -9999px;
   z-index: 9999; }
 
