--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans:400, 600");
+@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,600,700");
 body {
   font-family: "Open Sans", Arial, sans-serif;
   color: #4e525d;
@@ -28,7 +28,6 @@ body {
         body header .main-menu ul li {
           display: inline; }
           body header .main-menu ul li a {
-            color: #4e525d;
             text-decoration: none;
             font-size: 15px;
             padding: 28px 30px 25px;
@@ -48,10 +47,10 @@ body {
       background-position: center;
       padding: 10% 0;
       text-align: center;
-      font-weight: 600;
       color: #ffffff; }
       body .slider .slide h1 {
-        font-size: 63px; }
+        font-size: 63px;
+        font-weight: 600; }
       body .slider .slide p {
         font-weight: 400;
         margin: 30px 0 50px;
@@ -74,12 +73,7 @@ body {
           border: 2px solid #fffff; }
   body .content {
     color: #4e525d;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    width: 80%;
-    margin: 0 auto;
+    width: 100%;
     display: block;
     text-align: center; }
     body .content .team-header {
@@ -88,6 +82,8 @@ body {
         font-size: 43px;
         font-weight: 400; }
     body .content .team {
+      width: 80%;
+      margin: 0 auto;
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -121,6 +117,47 @@ body {
         body .content .team .team-member .member-info h3 {
           font-size: 22px;
           font-weight: 400; }
+    body .content .plans-cont {
+      background-color: #f1f1f1;
+      width: 100%;
+      padding: 120px 0 100px; }
+      body .content .plans-cont .plans {
+        width: 80%;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        margin: 0 auto; }
+        body .content .plans-cont .plans .plan-info {
+          width: 100%; }
+          body .content .plans-cont .plans .plan-info table {
+            margin: 0 auto;
+            width: 95%; }
+            body .content .plans-cont .plans .plan-info table td {
+              background-color: #ffffff;
+              font-size: 14px;
+              padding: 15px 0; }
+            body .content .plans-cont .plans .plan-info table td.plan-header {
+              background-color: #485460;
+              color: #ffffff;
+              font-size: 26px;
+              padding: 30px 0; }
+            body .content .plans-cont .plans .plan-info table td.price, body .content .plans-cont .plans .plan-info table td.btn {
+              background-color: #f8f9fb;
+              color: #485460;
+              font-size: 20px;
+              padding: 30px 0; }
+              body .content .plans-cont .plans .plan-info table td.price a, body .content .plans-cont .plans .plan-info table td.btn a {
+                background-color: #788492;
+                color: #ffffff;
+                font-size: 14px;
+                font-weight: 600;
+                text-decoration: none;
+                padding: 10px 50px;
+                -webkit-border-radius: 5px;
+                        border-radius: 5px; }
+                body .content .plans-cont .plans .plan-info table td.price a:hover, body .content .plans-cont .plans .plan-info table td.btn a:hover {
+                  background-color: #49cbcd; }
 
 @media only screen and (min-width: 320px) and (max-width: 700px) {
   .team {
@@ -130,7 +167,19 @@ body {
         -ms-flex-direction: column;
             flex-direction: column; }
   .team-member {
-    width: 100% !important; } }
+    width: 100% !important; }
+  .slide > h1 {
+    font-size: 40px !important;
+    margin: 0 0 30px 0 !important; }
+  .slide > p {
+    font-size: 12px !important;
+    margin: 40px 0 20px !important; }
+  .plans {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
 
 @media only screen and (max-width: 1100px) {
   .first-row {
