--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,51 +1,214 @@
-@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,600,700");
 body {
   font-family: "Open Sans", Arial, sans-serif;
+  color: #4e525d;
   margin: 0; }
   body header {
-    width: 80%;
-    margin: 11px auto;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    margin: 30px auto 11px; }
     body header .logo {
-      float: left;
       width: 20%; }
       body header .logo p {
         color: #44c0c2;
         font-family: 'Lobster', Arial, sans-serif;
         font-size: 43px;
-        margin: 0; }
+        margin: 0;
+        display: inline; }
     body header .main-menu {
-      width: 80%; }
+      width: 80%;
+      color: #484c55; }
       body header .main-menu ul {
-        display: inline;
         list-style-type: none;
-        float: right;
+        float: right; }
+        body header .main-menu ul li {
+          display: inline; }
+          body header .main-menu ul li a {
+            text-decoration: none;
+            font-size: 15px;
+            padding: 28px 30px 25px;
+            -webkit-transition: all 0.1s;
+            transition: all 0.1s; }
+            body header .main-menu ul li a:hover {
+              color: #44c0c2;
+              background-color: #f8f9fb;
+              border-bottom: 3px solid #44c0c2;
+              -webkit-transition: all 0.1s;
+              transition: all 0.1s; }
+  body .slider {
+    width: 100%; }
+    body .slider .slide {
+      background-image: url("../img/Base.png");
+      background-size: cover;
+      background-position: center;
+      padding: 10% 0;
+      text-align: center;
+      color: #ffffff; }
+      body .slider .slide h1 {
+        font-size: 63px;
+        font-weight: 600; }
+      body .slider .slide p {
+        font-weight: 400;
+        margin: 30px 0 50px;
+        font-size: 23px; }
+      body .slider .slide a {
+        margin-top: 20px;
+        color: #ffffff;
+        text-decoration: none;
+        font-size: 26px;
+        padding: 10px 50px;
+        -webkit-transition: all 0.1s;
+        transition: all 0.1s;
+        border: 2px solid #ffffff;
+          -webkit-border-radius: 7px;
+                  border-radius: 7px; }
+        body .slider .slide a:hover {
+          background-color: rgba(255, 255, 255, 0.2);
+          -webkit-transition: all 0.1s;
+          transition: all 0.1s;
+          border: 2px solid #fffff; }
+  body .content {
+    color: #4e525d;
+    width: 100%;
+    display: block;
+    text-align: center; }
+    body .content .team-header {
+      margin: 70px auto 50px; }
+      body .content .team-header h1 {
+        font-size: 43px;
+        font-weight: 400; }
+    body .content .team {
+      width: 80%;
+      margin: 0 auto;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex; }
+      body .content .team .first-row {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex; }
+      body .content .team .second-row {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex; }
+      body .content .team .team-member {
+        width: 100%;
+        margin: 0 auto; }
+        body .content .team .team-member .member-photo {
+          background-color: #eeeef0;
+          width: 200px;
+          height: 200px;
+          margin: 70px auto;
+          -webkit-border-radius: 50%;
+                  border-radius: 50%; }
+          body .content .team .team-member .member-photo:hover {
+            background-image: url("../img/plus.png");
+            background-repeat: no-repeat;
+            background-position: center; }
+        body .content .team .team-member .member-info p {
+          font-size: 14px; }
+        body .content .team .team-member .member-info h3 {
+          font-size: 22px;
+          font-weight: 400; }
+    body .content .plans-cont {
+      background-color: #f1f1f1;
+      width: 100%;
+      padding: 120px 0 100px; }
+      body .content .plans-cont .plans {
+        width: 80%;
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
-        text-align: right; }
-        body header .main-menu ul li a {
-          color: #484c55;
-          text-decoration: none;
-          font-size: 15px;
-          padding: 28px 30px 25px;
-          -webkit-transition: all 0.1s;
-          transition: all 0.1s; }
-          body header .main-menu ul li a:hover {
-            color: #44c0c2;
-            background-color: #f8f9fb;
-            border-bottom: 3px solid #44c0c2;
-            -webkit-transition: all 0.1s;
-            transition: all 0.1s; }
+        margin: 0 auto; }
+        body .content .plans-cont .plans .plan-info {
+          width: 100%; }
+          body .content .plans-cont .plans .plan-info table {
+            margin: 0 auto;
+            width: 95%; }
+            body .content .plans-cont .plans .plan-info table td {
+              background-color: #ffffff;
+              font-size: 14px;
+              padding: 15px 0; }
+            body .content .plans-cont .plans .plan-info table td.plan-header {
+              background-color: #485460;
+              color: #ffffff;
+              font-size: 26px;
+              padding: 30px 0; }
+            body .content .plans-cont .plans .plan-info table td.price, body .content .plans-cont .plans .plan-info table td.btn {
+              background-color: #f8f9fb;
+              color: #485460;
+              font-size: 20px;
+              padding: 30px 0; }
+              body .content .plans-cont .plans .plan-info table td.price a, body .content .plans-cont .plans .plan-info table td.btn a {
+                background-color: #788492;
+                color: #ffffff;
+                font-size: 14px;
+                font-weight: 600;
+                text-decoration: none;
+                padding: 10px 50px;
+                -webkit-border-radius: 5px;
+                        border-radius: 5px; }
+                body .content .plans-cont .plans .plan-info table td.price a:hover, body .content .plans-cont .plans .plan-info table td.btn a:hover {
+                  background-color: #49cbcd; }
 
-@media only screen and (min-width: 320px) and (max-width: 950px) {
-  .main-menu {
-    display: none !important; } }
+@media only screen and (min-width: 320px) and (max-width: 700px) {
+  .team {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .team-member {
+    width: 100% !important; }
+  .slide > h1 {
+    font-size: 40px !important;
+    margin: 0 0 30px 0 !important; }
+  .slide > p {
+    font-size: 12px !important;
+    margin: 40px 0 20px !important; }
+  .plans {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
 
-@media only screen and (min-width: 951px) {
-  .hamburger {
-    display: none !important; } }
+@media only screen and (max-width: 1100px) {
+  .first-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .second-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .team-member {
+    width: 100% !important; } }
+
+@media only screen and (min-width: 1100px) {
+  .first-row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .second-row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row; }
+  .team-member {
+    width: 100% !important; } }
