--- a/app/sass/libs.sass
+++ b/app/sass/libs.sass
@@ -1,4 +1,4 @@
 @import "app/libs/bxslider/dist/jquery.bxslider"
 @import "app/libs/humb/dist/humb"
-@import "app/style"
+@import "app/libs/valid/style"
 
