--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,7 +2,7 @@
 @import "app/libs/media/_media-queries";
 
 $color-green: #44c0c2
-
+ 
 $main-text-color: #4e525d
 
 $main-font: 'Open Sans', Arial, sans-serif
@@ -17,36 +17,39 @@ body
 	color: $main-text-color
 	margin: 0
 	header
-		+basic
-		margin: 30px auto 11px
-		.logo
-			width: 20%
-			p 
-				color: $color-green
-				font:
-					family: 'Lobster', Arial, sans-serif
-					size: 43px
-				margin: 0
-				display: inline
-		.main-menu
-			width: 80%
-			color: #484c55
-			ul 
-				list-style-type: none
-				float: right
-				li 
-					display: inline
-					a 
-						text-decoration: none
-						font-size: 15px
-						padding: 28px 30px 25px
-						transition: all 0.1s
+		width: 100%
 
-						&:hover 
-							color: $color-green
-							background-color: #f8f9fb
-							border-bottom: 3px solid #44c0c2
+		.head
+			+basic
+			margin: 30px auto 11px
+			.logo
+				width: 20%
+				p 
+					color: $color-green
+					font:
+						family: 'Lobster', Arial, sans-serif
+						size: 43px
+					margin: 0
+					display: inline
+			.main-menu
+				width: 80%
+				color: #484c55
+				ul 
+					list-style-type: none
+					float: right
+					li 
+						display: inline
+						a 
+							text-decoration: none
+							font-size: 15px
+							padding: 28px 30px 25px
 							transition: all 0.1s
+							color: #484c55
+							&:hover 
+								color: $color-green
+								background-color: #f8f9fb
+								border-bottom: 3px solid #44c0c2
+								transition: all 0.1s
 	.slider
 		width: 100%
 		.slide 
@@ -167,7 +170,7 @@ body
 								background-color: #49cbcd
 	footer
 		color: #ffffff
-		padding: 100px 0
+		padding: 100px 0 20px 0
 		background:
 			image: url("../img/cont.png")
 			size: cover
@@ -182,7 +185,7 @@ body
 			+basic
 			margin-top: 80px
 			.cont-info
-				width: 100%
+				width: 50%
 				h4
 					margin: 0
 					font:
@@ -219,40 +222,57 @@ body
 						font-size: 14px
 						color: #bface2
 			.cont-form
-				width: 100%
-				.mn 
+				width: 50%
+				.nm
 					display: flex
-					input 
-						width: 44%
-						padding: 10px
-						border-radius: 5px
-						border: none
-					.email
-						margin-left: 5%
-				.text
+					flex-direction: row
+					.w1
+						display: flex
+						flex-direction: column
+						width: 50%
+						.name
+							margin-right: 5%
+						input
+							border-radius: 5px
+							padding: 10px
+							box-sizing: border-box
+							border: none
+				.msg
 					display: flex
+					flex-direction: column
+					margin: 10px 0 0 0
 					textarea
-						width: 100%
-						margin: 15px 0
 						border-radius: 5px
-						padding: 10px
-						resize: none
-				.send
-					float: right
-					button
-						background-color: #44c0c2
 						border: none
-						color: #ffffff
+						resize: none
 						font:
 							family: $main-font
-							size: 20px
-						padding: 10px 50px
-						border-radius: 5px
+							size: 16px
+						padding: 10px 
+					.error-box
+						height: 22px
+				input.send
+					background-color: #44c0c2
+					border: none
+					float: right
+					margin: 20px 0
+					font-size: 18px
+					color: #ffffff
+					padding: 10px 40px
+					border-radius: 4px
+
+						
+
+					
+				
 
 
 
 
-
+.static-menu
+	position: fixed
+	background-color: rgba(175,218,185, 0.72)
+	margin-top: -30px
 
 
 
@@ -264,7 +284,8 @@ body
 
 	
 @include screen(320px, 700px) { .team{flex-direction: column}
-.team-member{width: 100%!important}.slide>h1{font-size: 40px!important; margin: 0 0 30px 0!important;}.slide>p{font-size: 12px!important; margin: 40px 0 20px!important;}.plans{flex-direction: column}}
+.team-member{width: 100%!important}.slide>h1{font-size: 40px!important; margin: 0 0 30px 0!important;}.slide>p{font-size: 12px!important; margin: 40px 0 20px!important;}.plans{flex-direction: column}
+.plan{width: 100%!important;} .pro{margin: 30px 0!important}}
 
 @include screen(320px, 700px) {}
 
@@ -277,5 +298,5 @@ body
 .second-row{flex-direction: row}
 .team-member{width: 100%!important}}
 
-@include max-screen(1000px) { 
-.contact{flex-direction: column!important}}
+@include max-screen(900px) { 
+.contact{flex-direction: column!important} .cont-info{width: 100%!important; text-align: center;}.cont-form{width: 100%!important;} .nm{flex-direction: column!important} .name{width:100%!important} .email{width:100%!important; float: left!important} .social{margin: 0 auto!important} .input-bloc{width:100%!important}}
